# splent_framework

./: .coverage  .gitignore  README.md  pyproject.toml
flasky/core/blueprints/: base_blueprint.py
flasky/core/managers/: module_manager.py
flasky/core/resources/: generic_resource.py
src/splent_framework/: app_factory.py
src/splent_framework/blueprints/: base_blueprint.py
src/splent_framework/bootstraps/: locustfile_bootstrap.py
src/splent_framework/configuration/: default_config.py
src/splent_framework/context/: context_manager.py
src/splent_framework/fixtures/: fixtures.py
src/splent_framework/helpers/: test_helpers_auth.py  test_helpers_db.py
src/splent_framework/hooks/: template_hooks.py
src/splent_framework/locust/: common.py
src/splent_framework/managers/: config_manager.py  db_manager.py  error_handler_manager.py  feature_loader.py  feature_manager.py  feature_order.py  jinja_manager.py  locale_manager.py  logging_manager.py  migration_manager.py  namespace_manager.py  session_manager.py  task_queue_manager.py
src/splent_framework/migrations/: feature_env.py
src/splent_framework/signals/: registry.py  (+1 more)
tests/: conftest.py  test_base_blueprint_security.py  test_base_repository.py  test_config_manager.py  test_config_manager_return.py  test_context_manager.py  test_default_config.py  test_error_handler_manager.py  test_feature_manager_parse.py  test_feature_order.py  test_feature_utils.py  test_generic_resource.py  test_migration_manager.py  test_namespace_manager.py  test_pyproject_reader.py  test_pyproject_reader_env.py  test_refinement.py
(+22 files in other folders)
