[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flasky_framework"
version = "0.0.1"
description = "Flasky es un framework de desarrollo web SPL en Python."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "David Romero", email = "drorganvidez@us.es" }]
license = { file = "LICENSE" }
dependencies = [
    "click",
    "python-dotenv",
    # Añade aquí otras dependencias necesarias para flasky_framework
]

[project.urls]
Homepage = "https://github.com/diverso-lab/flasky_framework"
Issues = "https://github.com/diverso-lab/flasky_framework/issues"
