[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flasky"
version = "0.0.1"
description = "Flasky es un framework de desarrollo web SPL en Python."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "David Romero", email = "drorganvidez@us.es" }]
license = { file = "LICENSE" }
dependencies = [
    "click",
    "python-dotenv",
    "sqlalchemy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flasky*"]

[project.urls]
Homepage = "https://github.com/diverso-lab/flasky_framework"
Issues = "https://github.com/diverso-lab/flasky_framework/issues"
